--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -19,6 +19,62 @@
     "\n",
     "Find the optimum graphically. Determine directions of feasible descent at the corner points of the feasible domain. Show the gradient directions of $f$ and $g_i$s at these points. Verify graphical results analytically using the KKT conditions.\n",
     "\n",
+    "### Solution\n",
+    "\n",
+    "![Alt text](./img/prob50201.png)\n",
+    " \n",
+    "\n",
+    "Graphic solution shows the optimum at ${\\bf x}_*=(0,1)^T$ and $f_*=2$.\n",
+    "\n",
+    "![Alt text](./img/prob50202.png)\n",
+    "\n",
+    "At (0,0): The angle marked includes the directions of feasible direction.\n",
+    "\n",
+    "![Alt text](./img/prob50203.png)\n",
+    "\n",
+    "At (2,0): The angle marked includes the directions of feasible direction.\n",
+    "\n",
+    "![Alt text](./img/prob50204.png)\n",
+    "\n",
+    "At (2,1): The angle marked includes the directions of feasible direction.\n",
+    "\n",
+    "![Alt text](./img/prob50205.png)\n",
+    "\n",
+    "At (0,1): No feasible descent directions. All feasible directions are ascent directions. This means ${\\bf\n",
+    "x}_*=(0,1)^T$ is the minimizer.\n",
+    "\n",
+    "Applying the KKT conditions at (0,1)\n",
+    "\n",
+    "* Necessary conditions: $g_2$ and $g_3$ are active $\\Rightarrow$ $\\mu_1$ and $\\mu_4$ equal 0.\n",
+    "\n",
+    "$$\n",
+    "\\begin{eqnarray*}\n",
+    "\\nabla f-{\\mu}^T\\nabla {\\bf g}&=&{\\bf 0}^T \\\\\n",
+    "&\\Rightarrow& \\left(\\begin{array}{c}\n",
+    "2(x_1+1)\\\\2(x_2-2)\\end{array}\\right) + \\left(\\begin{array}{c}\n",
+    "-\\mu_3\\\\\\mu_2\\end{array}\\right) =\\left.\\left(\\begin{array}{c}\n",
+    "0\\\\0\\end{array}\\right)\\right|_{(x_1,x_2)=(0,1)}\\\\\n",
+    "&\\Rightarrow& \\left(\\begin{array}{c}\n",
+    "2-\\mu_3\\\\-2+\\mu_2)\\end{array}\\right)=\\left(\\begin{array}{c}\n",
+    "0\\\\0\\end{array}\\right)\\Rightarrow \\mu_2=2,\\ \\mu_3=2\n",
+    "\\end{eqnarray*}\n",
+    "$$\n",
+    "\n",
+    "The KKT necessary conditions are satisfied at (0,1).\n",
+    "\n",
+    "* Sufficient conditions: The Hessian of Lagrangian is \n",
+    "\n",
+    "$$\n",
+    "\\begin{eqnarray*}\n",
+    "\\left(\\begin{array}{r@{\\quad}r} 2&0\\\\0&2\\end{array}\\right) \\hbox{\n",
+    ", which is positive definite everywhere}\n",
+    "\\end{eqnarray*}\n",
+    "$$\n",
+    "\n",
+    "Therefore, ${\\bf x}_*=(0,1)^T$ is the global minimum verifying the graphical solution.\n",
+    "\n",
+    "\n",
+    "\n",
     "### Problem 2 (10 Points)\n",
     "\n",
     "Graph the problem \n",
@@ -31,6 +87,42 @@
     "$$ \n",
     "\n",
     "Find the solution graphically. Then apply the optimality conditions. Can you find a solution based on the optimality conditions? Why? (From Kuhn and Tucker, 1951.)\n",
+    "\n",
+    "\n",
+    "### Solution\n",
+    "\n",
+    "![Alt text](./img/prob50401.png)\n",
+    "\n",
+    "From the graph we find the solution is at $(x_{1*},x_{2*})=(1,0)$.\n",
+    "\n",
+    "Checking the KKT conditions\n",
+    "\n",
+    "$$\n",
+    "\\begin{eqnarray*}\n",
+    "&&\\left(\\begin{array}{c}-1\\\\0\\end{array}\\right) + \\mu_1\n",
+    "\\left(\\begin{array}{c}3(1-x_1^2)\\\\1\\end{array}\\right) +\n",
+    "\\mu_2\\left(\\begin{array}{c}0\\\\-1\\end{array}\\right) =\n",
+    "\\left(\\begin{array}{c}0\\\\0\\end{array}\\right)\\\\\n",
+    "&&\\begin{array}{l@{\\quad}l} \\mu_1(x_2-(1-x_1)^3)=0,&\\mu_1\\geq0\\\\\n",
+    "-\\mu_2x_2=0,&\\mu_2\\geq0\\end{array}\n",
+    "\\end{eqnarray*}\n",
+    "$$\n",
+    "\n",
+    "at $(x_{1*},x_{2*})=(1,0)$,\n",
+    "\n",
+    "$$\n",
+    "\\begin{eqnarray*}\n",
+    "&&\\left(\\begin{array}{c}-1\\\\0\\end{array}\\right) + \\mu_1\n",
+    "\\left(\\begin{array}{c}0\\\\1\\end{array}\\right) +\n",
+    "\\mu_2\\left(\\begin{array}{c}0\\\\-1\\end{array}\\right) =\n",
+    "\\left(\\begin{array}{c}0\\\\0\\end{array}\\right) \\Rightarrow\n",
+    "\\begin{array} {l} -1 = 0 \\hbox{ : contradict}\\\\ \\mu_1-\\mu_2=0\\end{array}\n",
+    "\\end{eqnarray*}\n",
+    "$$\n",
+    "\n",
+    "Hence, this point is not a KKT point because this is not a regular\n",
+    "point.\n",
+    "\n",
     "\n",
     "### Problem 3 (30 Points)\n",
     "\n",
@@ -45,6 +137,61 @@
     "\n",
     "Use two methods: reduced gradient and Lagrange multipliers.\n",
     "\n",
+    "\n",
+    "### Solution\n",
+    "\n",
+    "* Reduced gradient\n",
+    "\n",
+    "Let $d_1=x_1$, $d_2=x_2$ and $s_1=x_3$.\n",
+    "$$\n",
+    "\\begin{eqnarray*}\n",
+    "\\partial z/\\partial{\\bf d} &=& (\\partial f/\\partial{\\bf d})\n",
+    "- (\\partial f/\\partial{\\bf s})(\\partial{\\bf h}/\\partial{\\bf\n",
+    "s})^{-1}(\\partial{\\bf h}/\\partial {\\bf d})\\\\\n",
+    "&=&\\left(\\begin{array}{c}x_2+x_3\\\\x_1+x_3\\end{array}\\right) -\n",
+    "(x_1+x_2)(1)^{-1}\\left(\\begin{array}{c}1\\\\1\\end{array}\\right)\\\\\n",
+    "&=&\\left(\\begin{array}{c}-x_1+x_3\\\\-x_2+x_3\\end{array}\\right)=\\left(\\begin{array}{c}0\\\\0\\end{array}\\right)\n",
+    "\\Rightarrow x_1=x_2=x_3\n",
+    "\\end{eqnarray*}\n",
+    "$$\n",
+    "\n",
+    "Solving $h=x_1+x_2+x_3-3=3x_1-3=0$, we get\n",
+    "$$\n",
+    "\\begin{eqnarray*}\n",
+    "x_{1*}=x_{2*}=x_{3*}=1 \\hbox{ and } f_*=3\n",
+    "\\end{eqnarray*}\n",
+    "$$\n",
+    "\n",
+    "* Lagrangian Method\n",
+    "\n",
+    "$$\n",
+    "\\begin{eqnarray*}\n",
+    "L&=& -f+\\lambda h = -x_1x_2-x_2x_3-x_3x_1+\\lambda(x_1+x_2+x_3-3)\\\\\n",
+    "\\nabla L&\\Rightarrow&\\left.\\begin{array}{cl}-x_2-x_3+\\lambda &=0\\\\\n",
+    "-x_1-x_2+\\lambda &=0\\\\\n",
+    "-x_1-x_3+\\lambda &=0\\end{array}\\right\\} \\Rightarrow\n",
+    "x_{1*}=x_{2*}=x_{3*}=1,\\ \\lambda =2 \\hbox{ and } f_*=3\n",
+    "\\end{eqnarray*}\n",
+    "$$\n",
+    "Checking the Second order sufficiency\n",
+    "$$\n",
+    "\\begin{eqnarray*}\n",
+    "\\partial{\\bf x}^T L_{\\bf xx} \\partial{\\bf x} = \\partial x_1\\partial\n",
+    "x_2+\\partial x_2\\partial x_3+\\partial x_3\\partial x_1\n",
+    "\\end{eqnarray*}\n",
+    "$$\n",
+    "Since $\\nabla h\\partial{\\bf x} = \\partial x_1+\\partial\n",
+    "x_2+\\partial x_3=0$,\n",
+    "$$\n",
+    "\\begin{eqnarray*}\n",
+    "\\partial{\\bf x}^T L_{\\bf xx} \\partial{\\bf x} = -(\\partial x_1^2+\\partial\n",
+    "x_2^2+\\partial x_1\\partial x_2)=-((\\partial x_1-\\partial\n",
+    "x_2/2)^2+\\frac{4}{3}\\partial x_2^2)\\leq0\n",
+    "\\end{eqnarray*}\n",
+    "$$\n",
+    "Therefore, ${\\bf x_*}=(1,1,1)$ is a global maximum.\n",
+    "\n",
+    "\n",
     "### Problem 4 (20 Points)\n",
     "\n",
     "Use reduced gradient to\tfind the value(s) of the parameter $b$ for which the point $x_1=1$, $x_2=2$ is the solution to the problem \n",
@@ -56,6 +203,87 @@
     "& \\quad g_2= x_1- x_2-2\\leq 0.\n",
     "\\end{aligned}\n",
     "$$ \n",
+    "\n",
+    "### Solution\n",
+    "\n",
+    "Rewrite the problem in the negative null form \n",
+    "\n",
+    "$$\n",
+    "{\\begin{eqnarray*}\n",
+    "{\\hbox{min }} &&f=-2x_{1} - bx_2\\\\\n",
+    "{\\hbox{subject to }} &&g_1 = x_{1}^{2}+ x_{2}^{2}-5\\leq 0\\\\\n",
+    "{\\hbox{and }} && g_2= x_1- x_2-2\\leq 0.\n",
+    "\\end{eqnarray*}}\n",
+    "$$\n",
+    "\n",
+    "At $x_1=1$ and $x_2=2$, $g_1$ is active. Hence, we can consider it\n",
+    "as an equality constraint.\n",
+    "\n",
+    "let $x_1=s$ and $x_2=d$,\n",
+    "\n",
+    "$$\n",
+    "\\begin{eqnarray*}\n",
+    "\\partial z/\\partial{\\bf d}|_{(1,2)} &=& (\\partial f/\\partial{\\bf d})\n",
+    "- (\\partial f/\\partial{\\bf s})(\\partial{\\bf h}/\\partial{\\bf\n",
+    "s})^{-1}(\\partial{\\bf h}/\\partial {\\bf d})|_{(1,2)}=-b-(-2)(2x_1)^{-1}(2x_2)|_{(1,2)}\\\\\n",
+    "&=&-b-(-2)(2)^{-1}(4)=0\\\\\n",
+    "\\end{eqnarray*}\n",
+    "$$\n",
+    "\n",
+    "Therefore, $b=4$.\n",
+    "\n",
+    "Check 2nd-order sufficiency conditions using reduced gradient.\n",
+    "$$\n",
+    "\\begin{eqnarray*}\n",
+    "\\frac{\\partial^2z}{\\partial{\\bf d}^2} &=& ({\\bf I},(\\partial{\\bf\n",
+    "s}/\\partial{\\bf d})^T) \\left(\\begin{array}{@{}c@{\\quad}c@{}}\n",
+    "\\frac{\\partial^2f}{\\partial{\\bf d}^2} &\n",
+    "\\frac{\\partial^2f}{\\partial\n",
+    " {\\bf d} \\partial{\\bf s}}\\\\\n",
+    "\\frac{\\partial^2f}{\\partial{\\bf s} \\partial{\\bf d}} &\n",
+    "      \\frac{\\partial^2f}{\\partial{\\bf s}^2}\n",
+    "\\end{array}\\right)\n",
+    " \\left(\\begin{array}{c} {\\rm I}\\\\ \\frac{\\partial{\\bf s}}{\\partial{\\bf d}}\n",
+    "\\end{array}\\right) + \\left(\\frac{\\partial f}{\\partial {\\bf s}}\\right)\n",
+    "\\left(\\frac{\\partial^2{\\bf s}}{\\partial{\\bf d}^2}\\right)\\\\\n",
+    "&=&\\left(\\frac{\\partial f}{\\partial {\\bf s}}\\right)\n",
+    "\\left(\\frac{\\partial^2{\\bf s}}{\\partial{\\bf d}^2}\\right) \\quad\n",
+    "(\\hbox{Since} f_{\\bf xx}={\\bf 0})\\\\\n",
+    "&=&\\left.- ({\\partial f}/{\\partial {\\bf s}})({\\partial {\\bf\n",
+    "h}}/{\\partial {\\bf s}})^{-1}({\\bf I},(\\partial{\\bf s}/\\partial{\\bf\n",
+    "d})^T){\\bf\n",
+    "h}_{{\\bf xx}}({\\bf I},(\\partial {\\bf s}/\\partial{\\bf d}))^T\\right|_{(1,2)}\\\\\n",
+    "&=&\\left.- (-2)(2x_2)^{-1}({\\bf I},(2x_1)^{-1}(2x_2)^T)\n",
+    "\\left(\\begin{array}{r@{\\quad}r} 2 & 0 \\\\ 0 & 2\\end{array}\\right)({\\bf I},(2x_1)^{-1}(2x_2))^T\\right|_{(1,2)}\\\\\n",
+    "&=&-(-2)(4)^{-1}(2+2(x_2/x_1)^2)|_{(1,2)}\\\\\n",
+    "&=&5>0\n",
+    "\\end{eqnarray*}\n",
+    "$$\n",
+    "Therefore, $b=4$ and $x_1=1$ and $x_2=2$ is a local minimizer.\n",
+    "\n",
+    "* Alternative Solution\n",
+    "\n",
+    "Check 2nd-order sufficiency conditions using KKT. The Lagrangian function is\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    L(x_1,x_2,\\mu_1,\\mu_2) = -2x_1-4x_2 + \\mu_1(x_1^2+x_2^2-5) + \\mu_2(x_1-x_2-2)\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "Then its gradient and Hessian wrt $\\textbf{x}$ are\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    L_x(x_1,x_2,\\mu_1,\\mu_2) = [-2 + 2 \\mu_1 x_1 + \\mu_2, -4 + 2 \\mu_1 x_2 - \\mu_2]^T,\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "and \n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    L_{xx}(x_1,x_2,\\mu_1,\\mu_2) = [2 \\mu_1, 0; 0, 2 \\mu_1].\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "Since $L_x(x_1,x_2,\\mu_1,\\mu_2)={\\bf 0}$ for $x_1=1$, $x_2=2$ and $\\mu_2=0$ ($g_2$ inactive), we have $\\mu_1 = 1$. Thus $L_{xx}(x_1,x_2,\\mu_1,\\mu_2) = [2, 0; 0, 2]$, p.d. Therefore $x_1=1$ and $x_2=2$ is a local minimizer.\n",
+    "\n",
+    "\n",
     "\n",
     "### Problem 5 (30 Points)\n",
     "\n",
@@ -94,10 +322,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
