--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -66,12 +66,11 @@
     "\n",
     "$$\n",
     "\\begin{eqnarray*}\n",
-    "\\left(\\begin{array}{r@{\\quad}r} 2&0\\\\0&2\\end{array}\\right) \\hbox{\n",
-    ", which is positive definite everywhere}\n",
+    "\\left(\\begin{array}{r@{\\quad}r} 2&0\\\\0&2\\end{array}\\right),\n",
     "\\end{eqnarray*}\n",
     "$$\n",
     "\n",
-    "Therefore, ${\\bf x}_*=(0,1)^T$ is the global minimum verifying the graphical solution.\n",
+    "which is positive definite everywhere. Therefore, ${\\bf x}_*=(0,1)^T$ is the global minimum verifying the graphical solution.\n",
     "\n",
     "\n",
     "\n",
