--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -65,9 +65,9 @@
     "* Sufficient conditions: The Hessian of Lagrangian is \n",
     "\n",
     "$$\n",
-    "\\begin{eqnarray*}\n",
+    "\\begin{equation*}\n",
     "\\left(\\begin{array}{r@{\\quad}r} 2&0\\\\0&2\\end{array}\\right),\n",
-    "\\end{eqnarray*}\n",
+    "\\end{equation*}\n",
     "$$\n",
     "\n",
     "which is positive definite everywhere. Therefore, ${\\bf x}_*=(0,1)^T$ is the global minimum verifying the graphical solution.\n",
