--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "$$\n",
     "\\begin{equation*}\n",
-    "\\left(\\begin{array}{r@{\\quad}r} 2&0\\\\0&2\\end{array}\\right),\n",
+    "\\left(\\begin{array}{r r} 2&0\\\\0&2\\end{array}\\right),\n",
     "\\end{equation*}\n",
     "$$\n",
     "\n",
