--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -235,7 +235,7 @@
     "$$\n",
     "\\begin{eqnarray*}\n",
     "\\frac{\\partial^2z}{\\partial{\\bf d}^2} &=& ({\\bf I},(\\partial{\\bf\n",
-    "s}/\\partial{\\bf d})^T) \\left(\\begin{array}{@{}c@{\\quad}c@{}}\n",
+    "s}/\\partial{\\bf d})^T) \\left(\\begin{array}{cc}\n",
     "\\frac{\\partial^2f}{\\partial{\\bf d}^2} &\n",
     "\\frac{\\partial^2f}{\\partial\n",
     " {\\bf d} \\partial{\\bf s}}\\\\\n",
@@ -253,7 +253,7 @@
     "d})^T){\\bf\n",
     "h}_{{\\bf xx}}({\\bf I},(\\partial {\\bf s}/\\partial{\\bf d}))^T\\right|_{(1,2)}\\\\\n",
     "&=&\\left.- (-2)(2x_2)^{-1}({\\bf I},(2x_1)^{-1}(2x_2)^T)\n",
-    "\\left(\\begin{array}{r@{\\quad}r} 2 & 0 \\\\ 0 & 2\\end{array}\\right)({\\bf I},(2x_1)^{-1}(2x_2))^T\\right|_{(1,2)}\\\\\n",
+    "\\left(\\begin{array}{rr} 2 & 0 \\\\ 0 & 2\\end{array}\\right)({\\bf I},(2x_1)^{-1}(2x_2))^T\\right|_{(1,2)}\\\\\n",
     "&=&-(-2)(4)^{-1}(2+2(x_2/x_1)^2)|_{(1,2)}\\\\\n",
     "&=&5>0\n",
     "\\end{eqnarray*}\n",
