--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -102,7 +102,7 @@
     "\\left(\\begin{array}{c}3(1-x_1^2)\\\\1\\end{array}\\right) +\n",
     "\\mu_2\\left(\\begin{array}{c}0\\\\-1\\end{array}\\right) =\n",
     "\\left(\\begin{array}{c}0\\\\0\\end{array}\\right)\\\\\n",
-    "&&\\begin{array}{l@{\\quad}l} \\mu_1(x_2-(1-x_1)^3)=0,&\\mu_1\\geq0\\\\\n",
+    "&&\\begin{array}{ll} \\mu_1(x_2-(1-x_1)^3)=0,&\\mu_1\\geq0\\\\\n",
     "-\\mu_2x_2=0,&\\mu_2\\geq0\\end{array}\n",
     "\\end{eqnarray*}\n",
     "$$\n",
@@ -142,15 +142,12 @@
     "* Reduced gradient\n",
     "\n",
     "Let $d_1=x_1$, $d_2=x_2$ and $s_1=x_3$.\n",
+    "\n",
     "$$\n",
     "\\begin{eqnarray*}\n",
     "\\partial z/\\partial{\\bf d} &=& (\\partial f/\\partial{\\bf d})\n",
     "- (\\partial f/\\partial{\\bf s})(\\partial{\\bf h}/\\partial{\\bf\n",
     "s})^{-1}(\\partial{\\bf h}/\\partial {\\bf d})\\\\\n",
-    "&=&\\left(\\begin{array}{c}x_2+x_3\\\\x_1+x_3\\end{array}\\right) -\n",
-    "(x_1+x_2)(1)^{-1}\\left(\\begin{array}{c}1\\\\1\\end{array}\\right)\\\\\n",
-    "&=&\\left(\\begin{array}{c}-x_1+x_3\\\\-x_2+x_3\\end{array}\\right)=\\left(\\begin{array}{c}0\\\\0\\end{array}\\right)\n",
-    "\\Rightarrow x_1=x_2=x_3\n",
     "\\end{eqnarray*}\n",
     "$$\n",
     "\n",
