--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -48,16 +48,18 @@
     "* Necessary conditions: $g_2$ and $g_3$ are active $\\Rightarrow$ $\\mu_1$ and $\\mu_4$ equal 0.\n",
     "\n",
     "$$\n",
-    "\\begin{eqnarray*}\n",
-    "\\nabla f-{\\mu}^T\\nabla {\\bf g}&=&{\\bf 0}^T \\\\\n",
-    "&\\Rightarrow& \\left(\\begin{array}{c}\n",
+    "\\begin{equation*}\n",
+    "\\begin{aligned}\n",
+    "\\nabla f-{\\mu}^T\\nabla {\\bf g}&={\\bf 0}^T \\\\\n",
+    "&\\Rightarrow \\left(\\begin{array}{c}\n",
     "2(x_1+1)\\\\2(x_2-2)\\end{array}\\right) + \\left(\\begin{array}{c}\n",
     "-\\mu_3\\\\\\mu_2\\end{array}\\right) =\\left.\\left(\\begin{array}{c}\n",
     "0\\\\0\\end{array}\\right)\\right|_{(x_1,x_2)=(0,1)}\\\\\n",
-    "&\\Rightarrow& \\left(\\begin{array}{c}\n",
+    "&\\Rightarrow \\left(\\begin{array}{c}\n",
     "2-\\mu_3\\\\-2+\\mu_2)\\end{array}\\right)=\\left(\\begin{array}{c}\n",
     "0\\\\0\\end{array}\\right)\\Rightarrow \\mu_2=2,\\ \\mu_3=2\n",
-    "\\end{eqnarray*}\n",
+    "\\end{aligned}\n",
+    "\\end{equation*}\n",
     "$$\n",
     "\n",
     "The KKT necessary conditions are satisfied at (0,1).\n",
