--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -50,7 +50,7 @@
     "$$\n",
     "\\begin{equation*}\n",
     "\\begin{aligned}\n",
-    "\\nabla f-{\\mu}^T\\nabla {\\bf g}&={\\bf 0}^T \\\\\n",
+    "&\\nabla f-{\\mu}^T\\nabla {\\bf g}={\\bf 0}^T \\\\\n",
     "&\\Rightarrow \\left(\\begin{array}{c}\n",
     "2(x_1+1)\\\\2(x_2-2)\\end{array}\\right) + \\left(\\begin{array}{c}\n",
     "-\\mu_3\\\\\\mu_2\\end{array}\\right) =\\left.\\left(\\begin{array}{c}\n",
@@ -99,26 +99,26 @@
     "Checking the KKT conditions\n",
     "\n",
     "$$\n",
-    "\\begin{eqnarray*}\n",
-    "&&\\left(\\begin{array}{c}-1\\\\0\\end{array}\\right) + \\mu_1\n",
+    "\\begin{aligned}\n",
+    "&\\left(\\begin{array}{c}-1\\\\0\\end{array}\\right) + \\mu_1\n",
     "\\left(\\begin{array}{c}3(1-x_1^2)\\\\1\\end{array}\\right) +\n",
     "\\mu_2\\left(\\begin{array}{c}0\\\\-1\\end{array}\\right) =\n",
     "\\left(\\begin{array}{c}0\\\\0\\end{array}\\right)\\\\\n",
-    "&&\\begin{array}{ll} \\mu_1(x_2-(1-x_1)^3)=0,&\\mu_1\\geq0\\\\\n",
+    "&\\begin{array}{ll} \\mu_1(x_2-(1-x_1)^3)=0,&\\mu_1\\geq0\\\\\n",
     "-\\mu_2x_2=0,&\\mu_2\\geq0\\end{array}\n",
-    "\\end{eqnarray*}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "at $(x_{1*},x_{2*})=(1,0)$,\n",
     "\n",
     "$$\n",
-    "\\begin{eqnarray*}\n",
-    "&&\\left(\\begin{array}{c}-1\\\\0\\end{array}\\right) + \\mu_1\n",
+    "\\begin{equation*}\n",
+    "\\left(\\begin{array}{c}-1\\\\0\\end{array}\\right) + \\mu_1\n",
     "\\left(\\begin{array}{c}0\\\\1\\end{array}\\right) +\n",
     "\\mu_2\\left(\\begin{array}{c}0\\\\-1\\end{array}\\right) =\n",
     "\\left(\\begin{array}{c}0\\\\0\\end{array}\\right) \\Rightarrow\n",
     "\\begin{array} {l} -1 = 0 \\hbox{ : contradict}\\\\ \\mu_1-\\mu_2=0\\end{array}\n",
-    "\\end{eqnarray*}\n",
+    "\\end{equation*}\n",
     "$$\n",
     "\n",
     "Hence, this point is not a KKT point because this is not a regular\n",
@@ -146,15 +146,15 @@
     "Let $d_1=x_1$, $d_2=x_2$ and $s_1=x_3$.\n",
     "\n",
     "$$\n",
-    "\\begin{eqnarray*}\n",
-    "\\partial z/\\partial{\\bf d} &=& (\\partial f/\\partial{\\bf d})\n",
+    "\\begin{aligned}\n",
+    "\\partial z/\\partial{\\bf d} &= (\\partial f/\\partial{\\bf d})\n",
     "- (\\partial f/\\partial{\\bf s})(\\partial{\\bf h}/\\partial{\\bf\n",
     "s})^{-1}(\\partial{\\bf h}/\\partial {\\bf d})\\\\\n",
-    "&=&\\left(\\begin{array}{c}x_2+x_3\\\\x_1+x_3\\end{array}\\right) -\n",
+    "&=\\left(\\begin{array}{c}x_2+x_3\\\\x_1+x_3\\end{array}\\right) -\n",
     "(x_1+x_2)(1)^{-1}\\left(\\begin{array}{c}1\\\\1\\end{array}\\right)\\\\\n",
-    "&=&\\left(\\begin{array}{c}-x_1+x_3\\\\-x_2+x_3\\end{array}\\right)=\\left(\\begin{array}{c}0\\\\0\\end{array}\\right)\n",
+    "&=\\left(\\begin{array}{c}-x_1+x_3\\\\-x_2+x_3\\end{array}\\right)=\\left(\\begin{array}{c}0\\\\0\\end{array}\\right)\n",
     "\\rightarrow x_1=x_2=x_3\n",
-    "\\end{eqnarray*}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "Solving $h=x_1+x_2+x_3-3=3x_1-3=0$, we get\n",
@@ -211,11 +211,13 @@
     "Rewrite the problem in the negative null form \n",
     "\n",
     "$$\n",
-    "{\\begin{eqnarray*}\n",
-    "{\\hbox{min }} &&f=-2x_{1} - bx_2\\\\\n",
-    "{\\hbox{subject to }} &&g_1 = x_{1}^{2}+ x_{2}^{2}-5\\leq 0\\\\\n",
-    "{\\hbox{and }} && g_2= x_1- x_2-2\\leq 0.\n",
-    "\\end{eqnarray*}}\n",
+    "\\begin{equation*}\n",
+    "\\begin{aligned}\n",
+    "{\\hbox{min}} & \\quad f=-2x_{1} - bx_2\\\\\n",
+    "{\\hbox{subject to}} & \\quad g_1 = x_{1}^{2}+ x_{2}^{2}-5\\leq 0\\\\\n",
+    "{\\hbox{and}} & \\quad g_2= x_1- x_2-2\\leq 0.\n",
+    "\\end{aligned}\n",
+    "\\end{equation*}\n",
     "$$\n",
     "\n",
     "At $x_1=1$ and $x_2=2$, $g_1$ is active. Hence, we can consider it\n",
@@ -224,20 +226,24 @@
     "let $x_1=s$ and $x_2=d$,\n",
     "\n",
     "$$\n",
-    "\\begin{eqnarray*}\n",
-    "\\partial z/\\partial{\\bf d}|_{(1,2)} &=& (\\partial f/\\partial{\\bf d})\n",
+    "\\begin{equation*}\n",
+    "\\begin{aligned}\n",
+    "\\partial z/\\partial{\\bf d}|_{(1,2)} &= (\\partial f/\\partial{\\bf d})\n",
     "- (\\partial f/\\partial{\\bf s})(\\partial{\\bf h}/\\partial{\\bf\n",
-    "s})^{-1}(\\partial{\\bf h}/\\partial {\\bf d})|_{(1,2)}=-b-(-2)(2x_1)^{-1}(2x_2)|_{(1,2)}\\\\\n",
-    "&=&-b-(-2)(2)^{-1}(4)=0\\\\\n",
-    "\\end{eqnarray*}\n",
+    "s})^{-1}(\\partial{\\bf h}/\\partial {\\bf d})|_{(1,2)}\\\\\n",
+    "&=-b-(-2)(2x_1)^{-1}(2x_2)|_{(1,2)}\\\\\n",
+    "&=-b-(-2)(2)^{-1}(4)=0\n",
+    "\\end{aligned}\n",
+    "\\end{equation*}\n",
     "$$\n",
     "\n",
     "Therefore, $b=4$.\n",
     "\n",
     "Check 2nd-order sufficiency conditions using reduced gradient.\n",
     "$$\n",
-    "\\begin{eqnarray*}\n",
-    "\\frac{\\partial^2z}{\\partial{\\bf d}^2} &=& ({\\bf I},(\\partial{\\bf\n",
+    "\\begin{equation*}\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial^2z}{\\partial{\\bf d}^2} &= ({\\bf I},(\\partial{\\bf\n",
     "s}/\\partial{\\bf d})^T) \\left(\\begin{array}{cc}\n",
     "\\frac{\\partial^2f}{\\partial{\\bf d}^2} &\n",
     "\\frac{\\partial^2f}{\\partial\n",
@@ -248,18 +254,19 @@
     " \\left(\\begin{array}{c} {\\rm I}\\\\ \\frac{\\partial{\\bf s}}{\\partial{\\bf d}}\n",
     "\\end{array}\\right) + \\left(\\frac{\\partial f}{\\partial {\\bf s}}\\right)\n",
     "\\left(\\frac{\\partial^2{\\bf s}}{\\partial{\\bf d}^2}\\right)\\\\\n",
-    "&=&\\left(\\frac{\\partial f}{\\partial {\\bf s}}\\right)\n",
+    "&=\\left(\\frac{\\partial f}{\\partial {\\bf s}}\\right)\n",
     "\\left(\\frac{\\partial^2{\\bf s}}{\\partial{\\bf d}^2}\\right) \\quad\n",
     "(\\hbox{Since} f_{\\bf xx}={\\bf 0})\\\\\n",
-    "&=&\\left.- ({\\partial f}/{\\partial {\\bf s}})({\\partial {\\bf\n",
+    "&=\\left.- ({\\partial f}/{\\partial {\\bf s}})({\\partial {\\bf\n",
     "h}}/{\\partial {\\bf s}})^{-1}({\\bf I},(\\partial{\\bf s}/\\partial{\\bf\n",
     "d})^T){\\bf\n",
     "h}_{{\\bf xx}}({\\bf I},(\\partial {\\bf s}/\\partial{\\bf d}))^T\\right|_{(1,2)}\\\\\n",
-    "&=&\\left.- (-2)(2x_2)^{-1}({\\bf I},(2x_1)^{-1}(2x_2)^T)\n",
+    "&=\\left.- (-2)(2x_2)^{-1}({\\bf I},(2x_1)^{-1}(2x_2)^T)\n",
     "\\left(\\begin{array}{rr} 2 & 0 \\\\ 0 & 2\\end{array}\\right)({\\bf I},(2x_1)^{-1}(2x_2))^T\\right|_{(1,2)}\\\\\n",
-    "&=&-(-2)(4)^{-1}(2+2(x_2/x_1)^2)|_{(1,2)}\\\\\n",
-    "&=&5>0\n",
-    "\\end{eqnarray*}\n",
+    "&=-(-2)(4)^{-1}(2+2(x_2/x_1)^2)|_{(1,2)}\\\\\n",
+    "&=5>0\n",
+    "\\end{aligned}\n",
+    "\\end{equation*}\n",
     "$$\n",
     "Therefore, $b=4$ and $x_1=1$ and $x_2=2$ is a local minimizer.\n",
     "\n",
@@ -301,6 +308,14 @@
     "\n",
     "by implementing the generalized reduced gradient algorithm."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "super-banana",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
