--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -166,6 +166,7 @@
     "\n",
     "* Lagrangian Method\n",
     "\n",
+    "We derive the Lagrangian by first converting the problem to negative-null form.\n",
     "$$\n",
     "\\begin{eqnarray*}\n",
     "L&=& -f+\\lambda h = -x_1x_2-x_2x_3-x_3x_1+\\lambda(x_1+x_2+x_3-3)\\\\\n",
@@ -178,20 +179,22 @@
     "Checking the Second order sufficiency\n",
     "$$\n",
     "\\begin{eqnarray*}\n",
-    "\\partial{\\bf x}^T L_{\\bf xx} \\partial{\\bf x} = \\partial x_1\\partial\n",
-    "x_2+\\partial x_2\\partial x_3+\\partial x_3\\partial x_1\n",
+    "\\partial{\\bf x}^T L_{\\bf xx} \\partial{\\bf x} = -2(\\partial x_1\\partial\n",
+    "x_2+\\partial x_2\\partial x_3+\\partial x_3\\partial x_1)\n",
     "\\end{eqnarray*}\n",
     "$$\n",
     "Since $\\nabla h\\partial{\\bf x} = \\partial x_1+\\partial\n",
     "x_2+\\partial x_3=0$,\n",
     "$$\n",
     "\\begin{eqnarray*}\n",
-    "\\partial{\\bf x}^T L_{\\bf xx} \\partial{\\bf x} = -(\\partial x_1^2+\\partial\n",
-    "x_2^2+\\partial x_1\\partial x_2)=-((\\partial x_1-\\partial\n",
-    "x_2/2)^2+\\frac{4}{3}\\partial x_2^2)\\leq0\n",
+    "\\partial{\\bf x}^T L_{\\bf xx} \\partial{\\bf x} = 2(\\partial x_1^2+\\partial\n",
+    "x_2^2+\\partial x_1\\partial x_2)=((\\partial x_1+\\partial\n",
+    "x_2/2)^2+\\frac{4}{3}\\partial x_2^2)\\geq0\n",
     "\\end{eqnarray*}\n",
     "$$\n",
-    "Therefore, ${\\bf x_*}=(1,1,1)$ is a global maximum.\n",
+    "Further, for $\\partial{\\bf x}^T L_{\\bf xx} \\partial{\\bf x}$ to be 0, $\\partial x_1$ and $\\partial x_2$ has to be 0, in which case $\\partial x_3$ is also 0, leading to $\\partial x=0$ which is not a perturbation. Therefore, $\\partial{\\bf x}^T L_{\\bf xx} \\partial{\\bf x}>0$ for any non-zero feasible perturbations.\n",
+    "\n",
+    "This proves that ${\\bf x_*}=(1,1,1)$ is a global maximum to the original problem.\n",
     "\n",
     "\n",
     "### Problem 4 (20 Points)\n",
@@ -312,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "super-banana",
+   "id": "enabling-beverage",
    "metadata": {},
    "outputs": [],
    "source": []
