testing hw4 bug

--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "Find the optimum graphically. Determine directions of feasible descent at the corner points of the feasible domain. Show the gradient directions of $f$ and $g_i$s at these points. Verify graphical results analytically using the KKT conditions.\n",
     "\n",
-    "<!-- ### Solution\n",
+    "### Solution\n",
     "\n",
     "![Alt text](./img/prob50201.png)\n",
     " \n",
@@ -309,13 +309,13 @@
     "\\end{aligned}\n",
     "$$ \n",
     "\n",
-    "by implementing the generalized reduced gradient algorithm. -->"
+    "by implementing the generalized reduced gradient algorithm."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "loaded-oriental",
+   "id": "representative-replica",
    "metadata": {},
    "outputs": [],
    "source": []
