--- a/Project/Project 3 topology optimization.ipynb
+++ b/Project/Project 3 topology optimization.ipynb
@@ -2,9 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cardiac-violin",
+   "id": "religious-metro",
    "metadata": {},
    "source": [
+    "<style TYPE=\"text/css\">\n",
+    "code.has-jax {font: inherit; font-size: 100%; background: inherit; border: inherit;}\n",
+    "</style>\n",
+    "<script type=\"text/x-mathjax-config\">\n",
+    "MathJax.Hub.Config({\n",
+    "    tex2jax: {\n",
+    "        inlineMath: [['$','$'], ['\\\\(','\\\\)']],\n",
+    "        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'] // removed 'code' entry\n",
+    "    }\n",
+    "});\n",
+    "MathJax.Hub.Queue(function() {\n",
+    "    var all = MathJax.Hub.getAllJax(), i;\n",
+    "    for(i = 0; i < all.length; i += 1) {\n",
+    "        all[i].SourceElement().parentNode.className += ' has-jax';\n",
+    "    }\n",
+    "});\n",
+    "</script>\n",
+    "<script type=\"text/javascript\" src=\"http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML\"></script>\n",
+    "\n",
+    "\n",
+    "\n",
     "## Application of Reduced Gradient - Topology Optimization\n",
     "\n",
     "<img src=\"tutorial_topopt/infill.gif\" alt=\"Drawing\" style=\"height: 600px;\"/>\n",
