Homework5 - QP w/ active set

--- a/Project/Project 1 gradient based algorithms and differentiable programming.ipynb
+++ b/Project/Project 1 gradient based algorithms and differentiable programming.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Project 1: Gradient-based Algorithms and Differentiable Programming\n",
     "\n",
@@ -47,13 +46,12 @@
     "## 2. Sample Code\n",
     "\n",
     "Before you start, please make sure you install the PyTorch package in Python. If you are using Pycharm, you can do so through *setting*->*Project: Your Project Name*->*Project Interpreter*->*Install (the little plus sign to the right of the window)*. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# overhead\n",
     "\n",
@@ -69,13 +67,13 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "logger = logging.getLogger(__name__)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# environment parameters\n",
     "\n",
@@ -86,13 +84,13 @@
     "# PLATFORM_WIDTH = 0.25  # landing platform width\n",
     "# PLATFORM_HEIGHT = 0.06  # landing platform height\n",
     "# ROTATION_ACCEL = 20  # rotation constant"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# define system dynamics\n",
     "# Notes: \n",
@@ -129,13 +127,13 @@
     "        state = t.matmul(step_mat, state)\n",
     "        state = state + delta_state + delta_state_gravity\n",
     "        return state"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# # Demonstrate the inplace operation issue\n",
     "\n",
@@ -162,13 +160,13 @@
     "#         state = t.matmul(step_mat, state)\n",
     "\n",
     "#         return state"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# a deterministic controller\n",
     "# Note:\n",
@@ -197,13 +195,13 @@
     "    def forward(self, state):\n",
     "        action = self.network(state)\n",
     "        return action"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# the simulator that rolls out x(1), x(2), ..., x(T)\n",
     "# Note:\n",
@@ -238,13 +236,13 @@
     "\n",
     "    def error(self, state):\n",
     "        return state[0]**2 + state[1]**2"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# set up the optimizer\n",
     "# Note:\n",
@@ -281,13 +279,13 @@
     "        y = data[:, 1]\n",
     "        plt.plot(x, y)\n",
     "        plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Now it's time to run the code!\n",
     "\n",
@@ -300,11 +298,12 @@
     "s = Simulation(c, d, T)  # define simulation\n",
     "o = Optimize(s)  # define optimizer\n",
     "o.train(50)  # solve the optimization problem"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 3. A Better Problem Formulation\n",
     "\n",
@@ -343,11 +342,11 @@
     "$$\n",
     "\n",
     "The code up this new problem, you will fully utilize the tensor operations in PyTorch. For example, the state tensor \"x\" will now become a N-by-2 matrix, where the first dimension represents the number of trajectories to be optimized. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 4. Grading\n",
     "\n",
@@ -358,16 +357,17 @@
     "* (30%) Analysis of the results: Please document the convergence and the optimal solutions (e.g., the state trajectory if it is a control problem).\n",
     "\n",
     "* (Bonus 20%) Formulation of a problem different from rocket landing: The PyTorch framework can also be used for other engineering problems, e.g., for structure design with nonlinear mechanical properties. You get 20 bonus points for solving your own problems that are at least at the same level of difficulty as rocket landing. "
-   ]
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "01ef4f39dfdb6b9ac45b62b4072444b380e64c61157c7fbd20fb951243ee6c76"
+   "hash": "283a19fe1c80cc8d674e9be3676f3725f85ae6255e6112c9eba9160b54893d27"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.3 64-bit ('base': conda)",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.7.3 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
